--- a/.github/workflows/dotnet-deploy.yml
+++ b/.github/workflows/dotnet-deploy.yml
@@ -4,10 +4,7 @@
 name: .NET Core Deploy to AWS Elastic Beanstalk
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
   build_and_deploy:
